--- a/rubika_interview_exam.ipynb
+++ b/rubika_interview_exam.ipynb
@@ -36,7 +36,8 @@
       "source": [
         "# Issues and future work\n",
         "\n",
-        "1. Try oversampling using augmentation"
+        "1. Try oversampling using augmentation\n",
+        "2. Try not to use Keras Applications pre-processing for the custom model :)"
       ]
     },
     {
@@ -70,11 +71,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lQB0dfC0y33Q"
+        "id": "lQB0dfC0y33Q",
+        "cellView": "form"
       },
       "source": [
         "#@title Imports { form-width: \"20%\"}\n",
         "\n",
+        "import sklearn\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
@@ -185,8 +188,8 @@
         "    )\n",
         ")\n",
         "\n",
-        "# for layer in model.layers:\n",
-        "#     layer.trainable = False\n",
+        "for layer in model.layers:\n",
+        "    layer.trainable = False\n",
         "\n",
         "model.add(\n",
         "    tf.keras.layers.Flatten()\n",
@@ -231,8 +234,8 @@
         "\n",
         "focal_loss = True #@param {type:\"boolean\"}\n",
         "first_layer_filters = 32 #@param {type:\"integer\"}\n",
-        "second_layer_filters = 64#@param {type:\"integer\"}\n",
-        "third_layer_filters = 128#@param {type:\"integer\"}\n",
+        "second_layer_filters = 64 #@param {type:\"integer\"}\n",
+        "third_layer_filters = 128 #@param {type:\"integer\"}\n",
         "\n",
         "\n",
         "model = tf.keras.Sequential()\n",
@@ -310,21 +313,18 @@
         "#@title Train { form-width: \"20%\" }\n",
         "class_weight = False #@param {type:\"boolean\"}\n",
         "save_on_each_epoch = True #@param {type:\"boolean\"}\n",
-        "epochs =  50#@param {type:\"integer\"}\n",
+        "epochs =  50 #@param {type:\"integer\"}\n",
         "batch_size = 32 #@param {type:\"integer\"}\n",
         "\n",
         "weights = None\n",
         "if class_weight:\n",
-        "    weights = {0: 1., 1: .1}\n",
-        "\n",
-        "    import sklearn\n",
         "    weights = sklearn.utils.class_weight.compute_class_weight(\n",
         "        \"balanced\",\n",
         "        np.unique(y_train_one_class),\n",
         "        y_train_one_class.ravel()\n",
         "    )\n",
         "    weights = {0: weights[0], 1: weights[1]}\n",
-        "    print(weights)\n",
+        "    print(\"Class weights: {}\".format(weights))\n",
         "    \n",
         "\n",
         "class CustomCallback(tf.keras.callbacks.Callback):\n",
@@ -356,7 +356,7 @@
         "#@title Evaluation { form-width: \"20%\" }\n",
         "\n",
         "load = True #@param {type:\"boolean\"}\n",
-        "model_epoch =  17#@param {type:\"integer\"}\n",
+        "model_epoch =  17 #@param {type:\"integer\"}\n",
         "\n",
         "if load:\n",
         "    model = tf.keras.models.load_model(\n",
